# PhoFilesystemIconHelper

./: .gitattributes  README.md  pyproject.toml
src/: test.py  test_non_gui.py
test/test_folder/: desktop.ini
